# stable-diffusion-webui-codex

./: .dockerignore  .gitattributes  .gitignore  .prettierrc.cjs  AGENTS.md  APPS-CODE-FILES-BY-SIZE.md  Analysis of SDXL and WAN 2.2 Pipelines in the WebUI Codex.docx  Analysis of SDXL and WAN 2.2 Pipelines in the WebUI Codex.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODESTYLE.md  COMMERCIAL.md  COMMON_MISTAKES.md  Dockerfile  HAR-fetch.json  INSTALL.md  NEWS.md  NOTICE  PROMPT_TO_SELF_2026-02-07_anima_keymaps.md  PROMPT_TO_SELF_2026-02-08_anima_er-sde_resume.md  PROMPT_TO_SELF_2026-02-08_ui_fixes_resume.md  PROMPT_TO_SELF_2026-02-12_VIDEO_INTERPOLATION_INSTALLER.md  README.md  README_HF_MODELS.md  SUBSYSTEM-MAP-INDEX.md  SUBSYSTEM-MAP.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  ZIMAGE_TEST_RECOMMENDATIONS.md  anima_comparison.json  audit_report.md  bios-popup.jpg:Zone.Identifier  codex_scratchpad_local.md  config.json  deep-research-report-kernels.md  dependency_checker.py  docker-compose.yml  gitignore.md  hq720.jpg:Zone.Identifier  (+26 more)
.agent/rules/: AGENTS.md  engine-development-checklist.md  sd-webui-codex.md
.github/: FUNDING.yml
.legacy/: .gitignore  AGENTS.md
.legacy/codex/: testing-and-tooling.md
.legacy/modules/: processing.py  rng.py  sd_models.py  sd_models_xl.py  sd_samplers_cfg_denoiser.py  sd_samplers_common.py  sd_samplers_kdiffusion.py  sd_samplers_timesteps.py  sd_schedulers.py  shared_options.py  sysinfo.py
.legacy/modules_forge/: alter_samplers.py  main_entry.py  shared_options.py  supported_controlnet.py
.legacy/root-archive/: script.js
DEPRECATED/: README.md
DEPRECATED/wan_gguf/: __init__.py
DEPRECATED/wan_gguf_core/: __init__.py  attn.py  latents.py  loop.py  mapping.py  ops.py  patch.py  runner.py  scheduler.py  text_context.py  tokenizer_resolver.py  unet_gguf.py
apps/: AGENTS.md  __init__.py  codex_launcher.py  docker_tui_launcher.py  gui_launcher.py  paths.json  settings_values.json  structure-improvements.md  tui_bios.py  tui_launcher.py
apps/backend/: AGENTS.md  SHIM_INVENTORY.md  __init__.py
apps/interface/: AGENTS.md  README.md  blocks.json  index.html  package-lock.json  package.json  presets.json  tabs.json  tsconfig.json  vite.config.ts  workflows.json
apps/launcher/: AGENTS.md  __init__.py  checks.py  log_buffer.py  (+4 more)
backend/: README.md  __init__.py  args.py  attention.py  loader.py  logging_utils.py  memory_management.py  torch_trace.py
backend_ext/: __init__.py
codex/: backend-analysis.md  backend-changes.md  backend-deep-dive.md  backend-video-architecture.md  backend.md  python-type-safety.md
k_diffusion/: sampling.py
modules/: cmd_args.py  deepbooru.py  deepbooru_model.py  devices.py  errors.py  extensions.py  img2img.py  img2vid.py  initialize.py  initialize_util.py  interrogate.py  launch_utils.py  logging_config.py  paths.py  paths_internal.py  processing.py  progress.py  rng.py  rng_philox.py  safe.py  scripts.py  sd_models.py  sd_models_config.py  sd_models_types.py  sd_models_xl.py  sd_samplers.py  sd_samplers_cfg_denoiser.py  sd_samplers_common.py  sd_samplers_kdiffusion.py  sd_samplers_lcm.py  sd_samplers_timesteps.py  sd_schedulers.py  sd_unet.py  sd_vae.py  sd_vae_approx.py  shared.py  shared_cmd_options.py  shared_init.py  shared_state.py  txt2img.py  (+4 more)
modules_forge/: alter_samplers.py  config.py  diffusers_patcher.py  initialization.py  main_entry.py  shared.py  supported_controlnet.py  supported_preprocessor.py  utils.py
scripts/: pyright-report.sh  trace_imports.py
tests/: test_flow_match_euler_prediction.py  test_fp32_norms_and_rope.py  test_task_registry_sse_replay.py
(+1423 files in other folders)
