[project]
name = "stable-diffusion-webui-codex"
version = "0.0.0"
description = "Codex Stable Diffusion WebUI"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
  # API server
  "fastapi==0.118.3",
  "starlette==0.48.0",
  "uvicorn==0.37.0",
  "pydantic==2.11.10",
  "httpx==0.28.1",
  "python-multipart==0.0.20",

  # Core utilities
  "requests==2.32.5",
  "rich==14.2.0",
  "tqdm==4.67.1",
  "psutil==7.1.0",
  "PyYAML==6.0.2",
  "piexif==1.1.3",

  # Model stack (Hugging Face / Diffusers)
  "accelerate==1.10.1",
  "diffusers==0.36.0",
  "transformers==4.57.3",
  "peft==0.17.1",
  "huggingface-hub==0.36.0",
  "tokenizers==0.22.1",
  "safetensors==0.7.0",
  "einops==0.8.1",
  "sentencepiece==0.2.1",

  # Imaging / numerics
  "numpy==1.26.4",
  "Pillow==10.4.0",

  # Small pins to keep resolver stable across platforms
  "filelock==3.20.0",
  "packaging==25.0",
  "regex==2025.9.18",
  "typing-extensions==4.15.0",

  # Windows-only niceties (optional in code, but improves console UX)
  "colorama==0.4.6; platform_system == 'Windows'",
]

[project.optional-dependencies]
# PyTorch is intentionally optional and selected by install scripts.
# Pick exactly one: cpu / cu118 / cu126 / cu128 / cu130.
cpu = [
  "torch==2.9.0",
  "torchvision==0.24.0",
]
cu118 = [
  "torch==2.7.1",
  "torchvision==0.22.1",
]
cu126 = [
  "torch==2.9.0",
  "torchvision==0.24.0",
]
cu128 = [
  "torch==2.9.0",
  "torchvision==0.24.0",
]
cu130 = [
  "torch==2.9.0",
  "torchvision==0.24.0",
]

[tool.uv]
python-preference = "only-managed"
python-downloads = "manual"
# Ensure `uv.lock` resolves against the primary supported environments.
# This avoids picking wheels that exist only for unrelated platforms (e.g. win_arm64).
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu118" },
    { extra = "cu126" },
    { extra = "cu128" },
    { extra = "cu130" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu118", extra = "cu118", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform != 'darwin'" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu118", extra = "cu118", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu126", extra = "cu126", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform != 'darwin'" },
  { index = "pytorch-cu130", extra = "cu130", marker = "sys_platform != 'darwin'" },
]
